@@ -13,7 +13,8 @@ import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -26,8 +27,16 @@ public class CustomUserDetailService implements UserDetailsService {
 
     @Override
     public UserDetails loadUserByUsername(@NonNull String username) throws UsernameNotFoundException {
-        User user = userRepository.findByUsername(username).orElseThrow(() -> new UsernameNotFoundException("Cannot find user with username: " + username));
-        GrantedAuthority authorities = new SimpleGrantedAuthority(user.getRole().getName());
-        return new org.springframework.security.core.userdetails.User(user.getUsername(), user.getPassword(), Collections.singletonList(authorities) );
+        User user = userRepository.findByUsernameWithRolePermissions(username)
+                .orElseThrow(() -> new UsernameNotFoundException("Cannot find user with username: " + username));
+
+        Set<GrantedAuthority> authorities = new HashSet<>();
+        authorities.add(new SimpleGrantedAuthority(user.getRole().getName()));
+        authorities.addAll(user.getRole().getPermissions().stream()
+                .map(permission -> permission.getPage().getCode().name() + ":" + permission.getAction().getCode().name())
+                .map(SimpleGrantedAuthority::new)
+                .collect(Collectors.toSet()));
+
+        return new org.springframework.security.core.userdetails.User(user.getUsername(), user.getPassword(), List.copyOf(authorities));
     }
 }
